text area extra spaces fixed  and contact.css width change

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -55,5 +55,16 @@ main {
 }
 
 @media screen and (min-width: 600px) {
-    
+    form {
+        width: 500px;
+    }
+
+    .form-elements {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .form-input {
+        width: 70%;
+    }
 }
